gcc/testsuite/g++.old-deja/g++.pt/crash7.C
// { dg-do assemble  }

class foo 
{
};

template <class T : public foo> // { dg-error "" } base clause
struct bar
{
};
